Fixed Internet Explorer text wrap issue

--- a/src/components/ProgramFooter/ProgramFooter.scss
+++ b/src/components/ProgramFooter/ProgramFooter.scss
@@ -50,6 +50,7 @@
       line-height: 50px;
       padding-left: 10%;
       padding-right: 10%;
+      width: 100%
     }
 
     .description {
